--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,7 @@
   },
   "default_locale": "en",
   "background" : {
-    "scripts":["src/override/main.js"]
+    "scripts":["src/override/main.js", "src/override/weather.js"]
   },
   "chrome_url_overrides": {
     "newtab": "src/override/override.html"
