toggle weather, remove alerts

--- a/manifest.json
+++ b/manifest.json
@@ -16,6 +16,7 @@
   },
   "default_locale": "en",
   "background" : {
+    "scripts" : ["src/override/opentab.js"]
   },
   "chrome_url_overrides": {
     "newtab": "src/override/override.html"
