--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,17 @@
 {
   "name": "Scratch Tab",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "manifest_version": 3,
   "permissions" : [
-    "storage",
-    "tabs"
+    "storage"
   ],
   "description": "Tab for temporary text space. Syncs for all new tabs",
-  "homepage_url": "https://richardkeller.net",
+  "homepage_url": "https://richardkeller.net/projects/chrome-extension/scratch-tab",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
-  "default_locale": "en",
   "chrome_url_overrides": {
     "newtab": "src/override/override.html"
   },
